@@ -126,6 +126,8 @@
 					</dependency>
 				</dependencies>
 				<configuration>
+					<showWeaveInfo>true</showWeaveInfo>
+					<Xlint>ignore</Xlint>
 					<forceAjcCompile>true</forceAjcCompile>
 					<sources>
 						<source>
@@ -137,6 +139,12 @@
 					</sources>
 					<parameters>true</parameters>
 					<complianceLevel>${java.version}</complianceLevel>
+					<weaveDependencies>
+						<weaveDependency>
+							<groupId>com.mysql</groupId>
+							<artifactId>mysql-connector-j</artifactId>
+						</weaveDependency>
+					</weaveDependencies>
 				</configuration>
 				<executions>
 					<execution>
@@ -153,24 +161,11 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<agents>
-						<aspectj>${project.build.directory}/aspectj/aspectjweaver-${aspectj.version}.jar</aspectj>
-					</agents>
-					<jvmArguments>
-						-Xmx1536M
-						--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
-						--add-opens=java.base/java.lang=ALL-UNNAMED
-						--add-opens=java.base/java.lang.reflect=ALL-UNNAMED
-						--add-opens=java.base/java.io=ALL-UNNAMED
-						--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
-					</jvmArguments>
-				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.11.0</version>
+				<version>3.13.0</version>
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
@@ -181,42 +176,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.1.2</version>
-				<configuration>
-					<argLine>-javaagent:${project.build.directory}/aspectj/aspectjweaver-${aspectj.version}.jar
-						-Xmx1536M
-						--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
-						--add-opens=java.base/java.lang=ALL-UNNAMED
-						--add-opens=java.base/java.lang.reflect=ALL-UNNAMED
-						--add-opens=java.base/java.io=ALL-UNNAMED
-						--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
-					</argLine>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>copy</id>
-						<phase>initialize</phase>
-						<goals>
-							<goal>copy</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<artifactItems>
-						<artifactItem>
-							<groupId>org.aspectj</groupId>
-							<artifactId>aspectjweaver</artifactId>
-							<version>${aspectj.version}</version>
-							<type>jar</type>
-							<overWrite>false</overWrite>
-							<outputDirectory>${project.build.directory}/aspectj</outputDirectory>
-						</artifactItem>
-					</artifactItems>
-				</configuration>
+				<version>3.5.1</version>
 			</plugin>
 		</plugins>
 	</build>
